<resources>
    <string name="app_name">DatItalia</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="campi_vuoti">Completare i campi mancanti</string>
    <string name="credenziali">Credenziali sbagliate, riprovare</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="common_signup_button_text">SIGN UP</string>
    <string name="selectProvincia">Seleziona la tua provincia</string>
    <string name="action_settings">Impostazioni</string>
    <string name="signuot">Esci</string>
    <string name="play">Gioca</string>
    <string name="view_data">Dati</string>
    <string name="play_menu">Play Menù</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_id">1064984812324</string>
    <string name="signin_failure">Sign in Failure</string>
    <string name="signin_other_error">Other Error in Sign In</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Stringhe modalità -->
    <string name="mod_nazionale">Nazionale</string>
    <string name="mod_regionale">Regione</string>
    <string name="mod_random">Random</string>
    <string name="mod_classifica">Classifica</string>
    <string name="confronto">Esegui confronto</string>
    <string name="str_confronto_1">Scegli due province per il confronto</string>
    <string name="str_confront_2">VS</string>
    <string name="turismo">Turismo</string>
    <string name="comuni">Spese comunali</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="cambio_provincia">Seleziona la provincia di appartenenza</string>
    <string name="cambio_username">Modifica i tuoi dati</string>
    <string name="settings_response">Modifica avvenuta con successo</string>
    <string name="settings_errore_inserimento">Devi inserire un username</string>
    <string name="info_sviluppatori_1">DatItalia è un’applicazione nata da un progetto svolto nel corso “Ingegneria del Software” dell’Università di Informatica Ca’Foscari tenuto dal docente Agostino Cortesi.
</string>
    <string name="info_sviluppatori_2">Gli sviluppatori di questo progetto sono gli studenti: Simone Scaboro, Gregory Sech, Alessia Marostica, Diletta Olliaro.</string>
    <string name="punteggio_player">Punteggio personale:</string>
    <string name="posizione_player">Posizione classifica:</string>

    <string name="vincitore">Vincitore</string>
    <string name="abbandona_gioco">Sicuro di voler abbandonare la partita?</string>
    <string name="STATUS_ON_WAIT">onWait</string>

    <string name="all_provinces">Stai visualizzando tutte le province</string>
    <string name="filtered_provinces">Stai visualizzando i dati relativi a:</string>
    <string name="select_comparto">Seleziona un comparto</string>
    <string name="map_snippet">+ %.2f €\n- %.2f €</string>
    <string name="cambio_provincia_primo_accesso">Questo è il tuo primo accesso, seleziona la tua provincia di appartenenza:</string>
    <string name="avvio_bot_message">Non è stato trovato alcun avversario al momento, vuoi giocare contro un giocatore virtuale o vuoi continuare ad attendere? N.B. Giocherai con la tua provincia e il computer con una casuale!</string>
    <string name="button_confronto">Confronta</string>
    <string name="game_text">Sfida i tuoi avversari online!</string>
    <string name="game_text2">In quale modalità vuoi giocare?</string>
    <string name="abbandona">Abbandona</string>
    <string name="info_gioco">La modalità gioco ti permetterà di sfidare altri giocatori in un quiz nel quale, chi risponderà al <b><i>maggior</i></b> numero di domande
    vince!\n
    Le modalità di gioco sono:\n
    <b>Nazionale</b>: sfida altri giocatori italiani da tutte le province italiane. Sarete te e il tuo avversario, ognuno con la sua provincia\n
    <b>Regionale</b>: sfida altri giocatori che giocano in province della tua stessa regione\n
    <b>Random</b>: gioca con una provincia casuale, contro un'altra provincia casuale\n\n
    Ricorda: non potrai giocare contro la tua stessa provincia.\n
    Nel caso non vengano trovatori giocatori durante la ricerca, potrai giocare contro il computer! In questo caso, tu userai la tua provincia e lui una provincia casuale.\n</string>
    <!-- SLIDER INIZIALE -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">AVANTI</string>
    <string name="skip">SALTA</string>
    <string name="start">INIZIA!</string>

    <string name="slide_1_title">Benvenuto su datItalia!</string>
    <string name="slide_1_desc">L\applicazione per visualizzare le entrate e le uscite relativi alle province italiane!</string>

    <string name="slide_2_title">Confronto</string>
    <string name="slide_2_desc">Esegui il confronto tra i dati di due province, riguardo ad entrate ed uscite</string>

    <string name="slide_3_title">Gioca!</string>
    <string name="slide_3_desc">Gioco con altre persone per vedere chi ne sa di più sulla sua provincia</string>

    <string name="slide_4_title">Dati</string>
    <string name="slide_4_desc">Visualizza su una mappa interattiva i dati di tutte le province italiane</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="info_applicazione1">Tutti i dati presenti in questa applicazione provengono da siope.it</string>
    <string name="info_applicazione2">Il SIOPE (Sistema informativo sulle operazioni degli enti pubblici), è un sistema di rilevazione telematica degli incassi e dei pagamenti effettuati dai tesorieri di tutte le amministrazioni pubbliche, che nasce dalla collaborazione tra la Ragioneria Generale dello Stato, la Banca d\'Italia e l\'ISTAT, in attuazione dall\'articolo 28 della legge n. 289/2002, disciplinato dall’articolo 14, commi dal 6 all’11, della legge n. 196 del 2009.</string>
</resources>