<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.heliohost.kakapo.datitalia.PlayMenuFragment">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mod_nazionale"
        android:id="@+id/btn_nazionale"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mod_regionale"
        android:id="@+id/btn_regionale"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mod_random"
        android:id="@+id/btn_random"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mod_classifica"
        android:id="@+id/btn_classifica"/>
</LinearLayout>
