<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#FFFFFF" />

    <TextView
        android:id="@+id/testo"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_game"
        android:layout_width="@dimen/button_quadrato_width"
        android:layout_height="@dimen/button_quadrato_height"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_general"
        android:text="@string/play"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size2"
        app:layout_constraintBottom_toTopOf="@+id/btn_confronto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_view_data"
        android:layout_width="@dimen/button_quadrato_width"
        android:layout_height="@dimen/button_quadrato_height"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_general"
        android:text="@string/view_data"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size2"
        app:layout_constraintBottom_toTopOf="@+id/btn_confronto"
        app:layout_constraintEnd_toStartOf="@+id/btn_game"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_confronto"
        android:layout_width="@dimen/button_rettangolo_width"
        android:layout_height="@dimen/button_rettangolo_height"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_general"
        android:text="@string/confronto"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>